--- a/E Travel City/travel-page-main/index.html
+++ b/E Travel City/travel-page-main/index.html
@@ -84,7 +84,7 @@
     </section>
 
     <!-- booking form section ends -->
-
+  
     <!-- about section starts  -->
 
     <section class="about" id="about">
@@ -104,7 +104,14 @@
 
     <!-- about section ends -->
 
-
+    <section class="section__container booking__container">
+        <div id="embedded-content">
+          <!-- Embedded script will load here -->
+          <script async src="https://tp.media/content?trs=365902&shmarker=586483&locale=en&curr=USD&powered_by=true&border_radius=5&plain=true&color_button=%23FF8E01&color_button_text=%23ffffff&color_border=%232681ff&promo_id=4132&campaign_id=121" charset="utf-8"></script>  
+          </div>
+          
+        </form>
+      </section>
 
     <!-- services section starts  -->
 
