--- a/E Travel City/travel-page-main/index.html
+++ b/E Travel City/travel-page-main/index.html
@@ -104,6 +104,11 @@
 
     <!-- about section ends -->
 
+
+
+     <br><br><br><br>
+     <div class="heading">
+    <center><h1>Book your Flight</h1></center>
     <section class="section__container booking__container">
         <div id="embedded-content">
           <!-- Embedded script will load here -->
@@ -111,7 +116,12 @@
           </div>
           
         </form>
-      </section>
+      </section></div>
+<br><br><br><br>
+
+
+
+
 
     <!-- services section starts  -->
 
