--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 
     <!-- custom css file link  -->
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="style.css">
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.css">
 
     <!-- custom js file link  -->
-    <script src="js/script.js" defer></script>
+    <script src="script.js" defer></script>
 
 </head>
 
@@ -371,7 +371,7 @@
                 <div class="box">
                     <p>This was our first time traveling with this company, and it won’t be the last! The accommodations were luxurious, and every detail was handled professionally. We felt so well taken care of.</p>
                     <div class="user">
-                        <img src="images/pic-1.png" alt="">
+                        <img src="pic-1.png" alt="">
                         <div class="info">
                             <h3>Matteo</h3>
                             <span></span>
@@ -381,7 +381,7 @@
                 <div class="box">
                     <p>Our trip was beyond incredible! The itinerary was perfectly planned, and the tour guides were knowledgeable and friendly. Every destination felt like a new adventure. Highly recommend!</p>
                     <div class="user">
-                        <img src="images/pic-2.png" alt="">
+                        <img src="pic-2.png" alt="">
                         <div class="info">
                             <h3>Sophia</h3>
                             <span></span>
@@ -391,7 +391,7 @@
                 <div class="box">
                     <p>This was our first time traveling with this company, and it won’t be the last! The accommodations were luxurious, and every detail was handled professionally. We felt so well taken care of.</p>
                     <div class="user">
-                        <img src="images/pic-3.png" alt="">
+                        <img src="pic-3.png" alt="">
                         <div class="info">
                             <h3>john deo</h3>
                             <span></span>
@@ -401,7 +401,7 @@
                 <div class="box">
                     <p>I can’t express how much we loved this trip! Every destination was more beautiful than the last. The local guides were friendly, and we learned so much about each place. Everything was perfect.</p>
                     <div class="user">
-                        <img src="images/pic-4.png" alt="">
+                        <img src="pic-4.png" alt="">
                         <div class="info">
                             <h3>Eliana</h3>
                             <span></span>
